syntax = "proto3";

package apix;

option go_package = "github.com/mnafshin/apix/pkg/api/generated;generated";

// -------- Messages --------

// A single HTTP request captured by the proxy
message HttpRequest {
  string method = 1;
  string url = 2;
  map<string, string> headers = 3;
  string body = 4;
  int64 timestamp = 5;
}

// A single HTTP response captured by the proxy
message HttpResponse {
  int32 status_code = 1;
  map<string, string> headers = 2;
  string body = 3;
}

// Plugins info
message PluginInfo {
  string name = 1;
  string version = 2;
  string description = 3;
}

// Request message for status RPC
message StatusRequest {}

// New empty message for CaptureTraffic RPC
message CaptureRequest {}

// New empty message for ListPlugins request
message PluginListRequest {}

// -------- Services --------

service Engine {
  // Health check
  rpc GetStatus(StatusRequest) returns (StatusResponse);

  // Stream captured HTTP requests
  rpc CaptureTraffic(CaptureRequest) returns (stream HttpRequest);

  // List installed plugins
  rpc ListPlugins(PluginListRequest) returns (PluginListResponse);
}

// -------- Replies --------

message StatusResponse {
  string status = 1; 
  string version = 2;
}

message PluginListResponse {
  repeated PluginInfo plugins = 1;
}